[tool.poetry]
name = "pytorch-geometric"
version = "0.1.0"
description = ""
authors = ["Gauzere Benoit <benoit.gauzere@insa-rouen.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch-geometric = "^2.4.0"
networkx = "^3.2"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
greycdata = "^0.1.0"
torch = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
